[package]
name = "prkcst"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = [
    "Command line utiities",
    "Development tools",
    "CLI",
    "Tool",
    "Command Line",
    "Terminal",
]
categories = ["Command line utiities", "Development tools"]
repository = "https://github.com/prk-Jr/prkcst"
description = "Command Line Shortcut"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
