[package]
name = "prkcst"
version = "0.4.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "json", "terminal"]
categories = ["Command line utiities", "Development tools"]
repository = "https://github.com/prk-Jr/prkcst"
description = "Command Line Shortcut"

crate-type = "bin"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
